Validaciones Incio de Sesion

--- a/.htaccess
+++ b/.htaccess
@@ -1,31 +1,15 @@
-# index file can be index.php, home.php, default.php etc.
-#DirectoryIndex index.php
-#-<IfModule mod_rewrite.c>
-# Rewrite engine
-#-RewriteEngine On
-#RewriteBase /tesis/
-# condition with escaping special chars
-#-RewriteCond $1 !^(index\.php|robots\.txt|favicon\.ico|assets\.php|application)
-#-RewriteCond %{REQUEST_FILENAME} !-f
-#-RewriteCond %{REQUEST_FILENAME} !-d
-#-RewriteRule ^(.*)$ ./index.php/$1 [L,QSA]
-#-</IfModule>
+<IfModule mod_rewrite.c>
+	
+	#Activación de Rewrite
+	RewriteEngine on	
+	
+	RewriteCond $1 !^(index\.php|resources|robots\.txt)
 
-#-<IfModule !mod_rewrite.c>
-    # If we don't have mod_rewrite installed, all 404's
-    # can be sent to index.php, and everything works as normal.
-    # Submitted by: ElliotHaughin
+	#Verificamos si es un directorio o archivo
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_FILENAME} !-d
 
-#-    ErrorDocument 404 /index.php
-#-</IfModule>
-
-#RewriteEngine On
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$ index.php/$1 [L]
-
-RewriteEngine on
-RewriteCond $1 !^(index\.php|images|css|js|robots\.txt|favicon\.ico)
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ ./index.php/$1 [L,QSA]
+	#En caso de no existir redireccionamos
+	RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+	
+</IfModule>
