--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.stTheme.cache
 *.sublime-workspace
 *.sublime-project
+documentos/cartaPostulacion-pasante.jpg
+*.pdf
+documentos/planActividades-pasante.xlsx
+*.jpg
+*.mp4
